--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2823,10 +2823,10 @@ input, select, textarea {
 		}
 
 		.main.style2 {
-			background-color: #333;
-			color: rgba(255, 255, 255, 0.75);
+			background-color: #f7f2f2;
+			color: rgba(244, 235, 235, 0.913);
 			background-attachment: fixed,							fixed;
-			background-image: url("images/bg.png"), url("../../images/header.jpg");
+			background-image: url("images/bg.jpeg"), url("../../images/header.jpg");
 			background-size: auto,							cover;
 		}
 
@@ -2847,7 +2847,7 @@ input, select, textarea {
 			}
 
 			.main.style2 header.major:after {
-				background: #ffffff;
+				background: #080808;
 			}
 
 			.main.style2 input[type="submit"],
@@ -2907,17 +2907,17 @@ input, select, textarea {
 			}
 
 			.main.style2 .icon.major {
-				color: #ffffff;
+				color: #070707;
 			}
 
 /* Header */
 
 	#header {
 		padding: 9em 0 9em 0 ;
-		background-color: #4686a0;
-		color: rgba(255, 255, 255, 0.75);
+		background-color: #131414;
+		color: rgba(16, 15, 15, 0.75);
 		background-attachment: fixed,							fixed,							fixed;
-		background-image: url("images/overlay2.png"), url("images/overlay3.svg"), linear-gradient(45deg, #9dc66b 5%, #4fa49a 30%, #4361c2);
+		background-image: url("images/1.png"), url("images/2.jpg"), linear-gradient(45deg, #9dc66b 5%, #4fa49a 30%, #4361c2);
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
 		overflow: hidden;
@@ -2930,11 +2930,11 @@ input, select, textarea {
 		}
 
 			#header a:hover {
-				color: #ffffff;
+				color: #181616;
 			}
 
 		#header h1, #header h2, #header h3, #header h4, #header h5, #header h6, #header strong, #header b {
-			color: #ffffff;
+			color: #0c0c0c;
 		}
 
 		#header header p {
@@ -3028,7 +3028,7 @@ input, select, textarea {
 			}
 
 			#header .actions:after {
-				background: #ffffff;
+				background: #090909;
 				content: '';
 				height: 100vh;
 				left: 50%;
@@ -3110,10 +3110,10 @@ input, select, textarea {
 
 	#footer {
 		padding: 6em 0 6em 0 ;
-		background-color: #4686a0;
-		color: rgba(255, 255, 255, 0.75);
+		background-color: #090a0a;
+		color: rgba(17, 15, 15, 0.75);
 		background-attachment: fixed,							fixed,							fixed;
-		background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #4361c2, #4fa49a 50%, #9dc66b 95%);
+		background-image: url("images/1.png"), url("images/2.jpg"), linear-gradient(45deg, #4361c2, #4fa49a 50%, #9dc66b 95%);
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
 		text-align: center;
